add module reservation

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -9,7 +9,7 @@
 
 
 <body >
-<footer class="footer bg-dark text-white ">
+<footer class="footer mt-auto bg-dark text-white ">
     <!-- Section: Social media -->
     <section class="d-flex justify-content-between p-4" style="background-color: #6351ce">
         <!-- Left -->
