--- a/src/main/resources/templates/my_partner.html
+++ b/src/main/resources/templates/my_partner.html
@@ -20,7 +20,7 @@
     }
 </style>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div th:replace="~{header :: header}"></div>
 
 <div class="container mb-5">
