--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
 <div th:replace="~{header :: header}"></div>
 
 
-<div id="carouselExampleCaptions" class="carousel slide" style="max-height: 600px;">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000" style="max-height: 600px;">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{/images/image4.jpg}" class="d-block w-100" alt="Tercera imagen" style="max-height: 500px; object-fit: cover;">
+            <img th:src="@{/images/image4.jpg}" class="d-block w-100" alt="Cuarta imagen" style="max-height: 500px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Ofrece servicios de lavado de autos de calidad</h5>
                 <p>Destácate ofreciendo servicios de lavado de autos de alta calidad con la comodidad de nuestro sitio web fácil de usar.</p>
@@ -81,6 +81,7 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
 
 
 
@@ -139,15 +140,17 @@
                         <button type="button" class="btn btn-outline-primary"
                                 data-bs-toggle="modal"
                                 data-bs-target="#partnerModal"
-                                th:attr="data-name=${partner.name},
-                                             data-description=${partner.description},
-                                             data-phone=${partner.phoneNumber},
-                                             data-address=${partner.address},
-                                             data-image=${partner.base64Image},
-                                             data-rating=${partner.rating},
-                                             data-services=${partner.services}">
+                                th:attr="data-id=${partner.id},
+                                         data-name=${partner.name},
+                                         data-description=${partner.description},
+                                         data-phone=${partner.phoneNumber},
+                                         data-address=${partner.address},
+                                         data-image=${partner.base64Image},
+                                         data-rating=${partner.rating},
+                                         data-services=${partner.services}">
                             Ver detalles
                         </button>
+
                     </div>
                 </div>
             </div>
@@ -190,6 +193,15 @@
                                 <ul class="list-group list-group-flush" id="partnerServices"></ul>
                                 <!-- <p><strong>Estado:</strong> <span id="partnerActive"></span></p> -->
                                 <button class="btn btn-outline-success mt-3">Contactar</button>
+<!--                                <button type="button" class="btn btn-outline-success mt-3" >-->
+<!--                                    <a th:href="@{'/reservation/' + ${ id }}">Reservar</a>-->
+<!--                                </button>-->
+
+                                <button class="btn btn-outline-primary mt-3" id="reserveButton" >
+                                    Reservar
+                                </button>
+
+
                             </div>
                         </div>
                     </div>
@@ -229,6 +241,9 @@
     var partnerModal = document.getElementById('partnerModal');
     partnerModal.addEventListener('show.bs.modal', function (event) {
         var button = event.relatedTarget; // Botón que activó el modal
+        var id = button.getAttribute('data-id');
+        // Aquí puedes hacer lo que necesites con el ID
+        console.log('ID del partner:', id);
         var name = button.getAttribute('data-name');
         var description = button.getAttribute('data-description');
         var phone = button.getAttribute('data-phone');
@@ -237,10 +252,10 @@
         var rating = button.getAttribute('data-rating')
         // var active = button.getAttribute('data-active') === 'true' ? 'Activo' : 'Inactivo';
         var dataServices = button.getAttribute('data-services');
-        // Remplazar los paréntesis y las comas con comillas dobles y comas según sea necesario
+        // Remplaza los paréntesis y las comas con comillas dobles y comas según sea necesario
         var jsonData = dataServices.replace(/PartnerTypeCatalogDTO\(id=(\d+), serviceName=(.*?), price=(.*?)\)/g, '{"id":$1,"serviceName":"$2","price":$3}');
 
-        // Analizar la cadena como JSON
+        // Analiza la cadena como JSON
         var services = JSON.parse(jsonData);
 
         // console.log(services);
@@ -311,12 +326,30 @@
 
             // Agrega el <li> al cuerpo del modal
             modalBodyServices.appendChild(listItem);
+
         });
 
     });
 </script>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var partnerModal = document.getElementById('partnerModal');
+        var reserveButton = document.getElementById('reserveButton');
 
+
+        partnerModal.addEventListener('show.bs.modal', function(event) {
+            var button = event.relatedTarget; // Botón que activó el modal
+            var id = button.getAttribute('data-id');
+            // Aquí puedes hacer lo que necesites con el ID
+            console.log('ID del partner:', id);
+
+            // Actualizar el atributo "href" del botón "Reservar" con el ID
+            reserveButton.setAttribute('data-id', id);
+            reserveButton.setAttribute('onclick', "window.location.href='/reservacion/" + id + "'");
+        });
+    });
+</script>
 
 
 
